feat: add optional item location
