# item-manager/kernel/src/model/item/laptop.rs
@@ -6,5 +6,6 @@ pub struct Laptop {
     pub name: String,
     pub mac_address: mac_address::MacAddress,
     pub description: String,
+    pub location: Option<String>,
     pub checkout: Option<SimpleCheckout>,
 }
